--- a/_data/home_news.yml
+++ b/_data/home_news.yml
@@ -1,7 +1,18 @@
-# News items for the homepage (most recent first)
+# News for the homepage (most recent first). Optional: add "url" for a link.
+- date: "2026-02"
+  text: "One paper accepted in Chinese Journal of Electronics."
+- date: "2026-01"
+  text: "One paper accepted in IEEE Transactions on Vehicular Technology."
+  url: "https://ieeexplore.ieee.org/document/11370276"
+- date: "2025-11"
+  text: "TokCom-UEP submitted to IEEE Wireless Communications Letters."
+  url: "https://arxiv.org/abs/2511.22859"
+- date: "2025-10"
+  text: "Token Communications paper officially published in IEEE Wireless Communications (magazine)."
+  url: "https://ieeexplore.ieee.org/document/11175596"
 - date: "2025-09"
   text: "Joined the University of Hong Kong as a Postdoctoral Research Fellow in the EEE Department."
 - date: "2025-05"
-  text: "Received the Best Paper Award at IEEE INFOCOM Workshop for our work on token-domain multiple access."
+  text: "Received the Best Paper Award at IEEE INFOCOM Workshop (token-domain multiple access)."
 - date: "2025-04"
   text: "Awarded the Xu Teli Scholarship (University's highest honor for Ph.D. students at BIT)."
