--- a/_data/home_education.yml
+++ b/_data/home_education.yml
@@ -5,5 +5,5 @@
   text: "Beijing Institute of Technology, Beijing, China. Ph.D. in Information and Communication Engineering, 09/2019 – 06/2025. Supervisor: Prof. Jun Zhang (Academician, Chinese Academy of Engineering)."
 - degree: "Visiting Ph.D."
   text: "Imperial College London, London, UK. Visiting Ph.D. student, 07/2022 – 04/2023. Supervisor: Prof. Deniz Gündüz (IEEE Fellow)."
-- degree: "Dual Ph.D."
-  text: "University of Surrey, Guildford, UK. Dual PhD program, Institute for Communication Systems, 5GIC & 6GIC, 04/2023 – 08/2025. Supervisors: Dr. Mahdi Boloursaz Mashhadi, Prof. Chuan Heng Foh."
+- degree: "Ph.D."
+  text: "University of Surrey, Guildford, UK. Institute for Communication Systems, 5GIC & 6GIC, 04/2023 – 08/2025. Supervisors: Dr. Mahdi Boloursaz Mashhadi, Prof. Chuan Heng Foh."
